# gcodegen

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.sh  test_integration.py
doc/: H-Airbrush_Development_Intentions.md
gcode/: bill.gcode  heart-4-5.gcode  scribbles-36.gcode
gcodegen/: __init__.py  airbrush.py  cli.py  config.py  default_config.yaml  gcode.py  path_processor.py  svg.py  test_config.py  test_gcode.py  test_svg_parser.py
