[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcodegen"
version = "0.1.0"
description = "Custom G-Code generator for Dual-airbrush plotter controller using Duet 2 WiFi board"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "semiuniversal", email = "w.tremblay@gmail.com" }
]
dependencies = [
    "lxml>=4.9.0",  # For XML/SVG processing
    "pyyaml>=6.0",  # For configuration files
    "numpy>=1.22.0",  # For numerical operations and path processing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
gcodegen = "gcodegen.cli:main"

